--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Map01.Map01
 EditorStartupMap=/Game/Maps/Map01.Map01
+GlobalDefaultGameMode=/Game/GameMode/Blueprints/BP_BossArenaGameModeBase.BP_BossArenaGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
